# claudepilled

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  data.db.transfer  example_tools.py  pyproject.toml  shell.nix
claude_wrapper/: __init__.py  backrooms.py  backrooms_commands.py  briefing_anki.py  briefing_assembly.py  briefing_db.py  briefing_feeds.py  briefing_routes.py  briefing_sequential.py  calendar_db.py  calendar_routes.py  calendar_tools.py  client.py  conversation.py  couch.py  db.py  email_db.py  email_ingestion.py  email_routes.py  file_db.py  file_routes.py  models.py  pin_db.py  pin_routes.py  pin_tools.py  providers.py  server.py  task_db.py  task_routes.py  task_tools.py  task_urgency.py  tools.py
data/: acx_best_of.json  album_list.json  gwern_essays.json  sequences_order.json
docs/: apple-watch-shortcut.md
graphiti_memory/: .env.example  config.yaml  docker-compose.yaml  pyproject.toml
graphiti_memory/src/: __init__.py  chat.py  formatting.py  graph.py  ingest.py  inspect.py  parser.py  prune.py  retrieve.py  sync.py
graphiti_memory/tests/: test_parser.py
llm_interface/: __init__.py  backrooms.py  backrooms_commands.py  briefing_anki.py  briefing_assembly.py  briefing_db.py  briefing_feeds.py  briefing_routes.py  briefing_sequential.py  calendar_db.py  calendar_routes.py  calendar_tools.py  client.py  conversation.py  db.py  email_db.py  email_ingestion.py  email_routes.py  file_db.py  file_routes.py  models.py  pin_db.py  pin_routes.py  pin_tools.py  plugin_loader.py  plugin_protocol.py  providers.py  server.py  service_registry.py  task_db.py  task_routes.py  task_tools.py  task_urgency.py  tools.py
llm_interface/plugins/: __init__.py
llm_interface/plugins/briefing/: __init__.py  anki.py  assembly.py  db.py  feeds.py  routes.py  sequential.py
llm_interface/plugins/calendar/: __init__.py  db.py  routes.py  tools.py
llm_interface/plugins/email/: __init__.py  db.py  ingestion.py  routes.py
llm_interface/plugins/files/: __init__.py  db.py  routes.py
llm_interface/plugins/memory/: __init__.py
llm_interface/plugins/pins/: __init__.py  db.py  routes.py  tools.py
llm_interface/plugins/tasks/: __init__.py  db.py  routes.py  tools.py  urgency.py
static/: agenda.js  app.js  backrooms-adapter.js  briefing.css  briefing.html  briefing.js  chat-core.js  column4.js  couch.css  couch.html  couch.js  index.html  latex-rendering.js  manifest.json  nav-loader.js  settings.css  settings.html  settings.js  style.css  sw.js  tasks.css  tasks.html  tasks.js
static/plugins/moodboard/: panel.js
