[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-wrapper"
version = "0.1.0"
description = "A wrapper around the Anthropic Claude API with tool use, conversation management, and a web UI."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
    "feedparser>=6.0.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]


[tool.setuptools]
packages = ["claude_wrapper"]

[project.scripts]
claude-wrapper = "claude_wrapper.server:main"
claude-wrapper-briefing = "claude_wrapper.briefing_assembly:cli_main"
